--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
